--- a/main.css
+++ b/main.css
@@ -8,19 +8,20 @@ html {
 }
 
 body {
-  --padding: 40px;
-  --padding2x: 80px;
+  --padding: 50px;
+  --padding-x: var(--padding);
+  --padding-y: var(--padding);
 
-  width: calc(100% - var(--padding2x));
-  height: calc(100% - var(--padding2x));
+  width: calc(100% - calc(var(--padding-x) * 2));
+  height: calc(100% - calc(var(--padding-y) * 2));
   margin: 0;
-  padding: var(--padding);
+  padding: var(--padding-y) var(--padding-x);
 
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-auto-flow: row;
-  grid-gap: var(--padding);
+  grid-gap: var(--padding-y) var(--padding-x);
 }
 
 .swatch {
