--- a/src/static/style.css
+++ b/src/static/style.css
@@ -3,23 +3,80 @@ html, body, #root, .app {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
+  color: #333;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 12px 0 4px;
+}
+
+.app {
+  display: grid;
+  grid-template-columns: 155px 1fr;
+  grid-template-rows: 1fr;
+  grid-auto-flow: column;
+}
+
+.controls {
+  padding: 10px;
+  background-color: #EEE;
+}
+
+.simple-button {
+  padding: 0px 9px;
+  cursor: pointer;
+}
+
+.picker .popover {
+  position: absolute;
+  z-index: 2;
+}
+
+.picker .cover {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+}
+
+.picker .preview {
+  --size: 24px;
+  padding: 2px;
+  line-height: var(--size);
+}
+
+.picker .preview > div {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.picker .preview .color {
+  width: var(--size);
+  height: var(--size);
+  cursor: pointer;
+}
+
+.picker .preview .text {
+  padding-left: 4px;
+  font-size: 14px;
 }
 
 .grid {
-  --padding: 50px;
-  --padding-x: var(--padding);
-  --padding-y: var(--padding);
+  --inner-padding: 30px;
+  --outer-padding: 40px;
 
-  width: calc(100% - calc(var(--padding-x) * 2));
-  height: calc(100% - calc(var(--padding-y) * 2));
+  width: calc(100% - calc(var(--outer-padding) * 2));
+  height: calc(100% - calc(var(--outer-padding) * 2));
   margin: 0;
-  padding: var(--padding-y) var(--padding-x);
+  padding: var(--outer-padding);
 
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-auto-flow: row;
-  grid-gap: var(--padding-y) var(--padding-x);
+  grid-gap: var(--inner-padding);
 }
 
 .swatch {
