--- a/docs/style.css
+++ b/docs/style.css
@@ -1,6 +1,100 @@
-html, body, #root {
+html, body, #root, .app {
   width: 100%;
   height: 100%;
-  background: #222;
-  color: #EEE;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  color: #333;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 12px 0 4px;
+}
+
+.app {
+  display: grid;
+  grid-template-columns: 155px 1fr;
+  grid-template-rows: 1fr;
+  grid-auto-flow: column;
+}
+
+.controls {
+  padding: 10px;
+  background-color: #EEE;
+}
+
+.references a {
+  display: block;
+  padding: 0 2px 2px;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.references a:hover {
+  text-decoration: underline;
+}
+
+.simple-button {
+  padding: 0px 9px;
+  cursor: pointer;
+}
+
+.picker .popover {
+  position: absolute;
+  z-index: 2;
+}
+
+.picker .cover {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+}
+
+.picker .preview {
+  --size: 24px;
+  padding: 2px;
+  line-height: var(--size);
+}
+
+.picker .preview > div {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.picker .preview .color {
+  width: var(--size);
+  height: var(--size);
+  cursor: pointer;
+}
+
+.picker .preview .text {
+  padding-left: 4px;
+  font-size: 14px;
+}
+
+.grid {
+  --inner-padding: 30px;
+  --outer-padding: 40px;
+
+  width: calc(100% - calc(var(--outer-padding) * 2));
+  height: calc(100% - calc(var(--outer-padding) * 2));
+  margin: 0;
+  padding: var(--outer-padding);
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-auto-flow: row;
+  grid-gap: var(--inner-padding);
+}
+
+.swatch {
+  display: flex;
+  flex-flow: column;
+}
+
+.color {
+  flex: 1 auto;
 }
