--- a/docs/style.css
+++ b/docs/style.css
@@ -3,6 +3,7 @@ html, body, #root, .app {
   height: 100%;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: sans-serif;
   color: #333;
 }
@@ -34,9 +35,31 @@ h1, h2, h3, h4, h5, h6 {
   text-decoration: underline;
 }
 
-.simple-button {
-  padding: 0px 9px;
+.add-button,
+.remove-button {
+  --size: 23px;
+  text-align: center;
   cursor: pointer;
+  width: var(--size);
+  height: var(--size);
+  line-height: var(--size);
+}
+
+.add-button:hover,
+.remove-button:hover {
+  background-color: #CCC;
+}
+
+.add-button {
+  margin-top: 2px;
+  margin-left: 1px;
+  border: 1px dotted #333;
+  
+}
+
+.remove-button {
+  margin-left: 2px;
+  color: #E62626;
 }
 
 .picker .popover {
