--- a/src/static/style.css
+++ b/src/static/style.css
@@ -37,7 +37,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .add-button,
 .remove-button {
-  --size: 23px;
   text-align: center;
   cursor: pointer;
   width: var(--size);
@@ -47,19 +46,23 @@ h1, h2, h3, h4, h5, h6 {
 
 .add-button:hover,
 .remove-button:hover {
-  background-color: #CCC;
+  background-color: #DDD;
 }
 
 .add-button {
+  --size: 23px;
   margin-top: 2px;
   margin-left: 1px;
+  margin-bottom: 14px;
   border: 1px dotted #333;
   
 }
 
 .remove-button {
-  margin-left: 2px;
-  color: #E62626;
+  --size: 24px;
+  margin-left: 4px;
+  border-radius: 3px;
+  color: rgb(180, 52, 52);
 }
 
 .picker .popover {
@@ -93,7 +96,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .picker .preview .text {
-  padding-left: 4px;
+  margin-left: 8px;
   font-size: 14px;
 }
 
