Fix PhotoshopPicker OK/Cancel

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -82,6 +82,11 @@ input {
   bottom: 0px;
 }
 
+.picker .photoshop-picker {
+  position: relative;
+  z-index: 10;
+}
+
 .picker .preview {
   --size: 24px;
   padding: 2px;
